# Flux-Shop

./: .gitignore  README.md  deploy.sh  docker-compose.yml  guvenlik_ayarlari.md  lazımlıklar.text  package-lock.json  pc_builder_kullanim_kilavuzu.md  settings.py  webhook_server.py
.github/workflows/: android-build.yml  desktop-build.yml
backend/: .dockerignore  Dockerfile  requirements.txt
backend/config/: settings.py  urls.py
backend/products/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/products/migrations/: 0001_initial.py  0002_product_discount_end_date_product_discount_rate_and_more.py  0003_alter_siteconfiguration_main_announcement_text.py  0004_remove_siteconfiguration_main_announcement_text_and_more.py  0005_alter_category_options_category_parent_category_slug.py  0006_promobanner.py  0007_productimage_reviewimage.py  0008_order_orderitem.py  0009_bugreport.py  0010_coupon_order_coupon.py  0011_coupon_max_discount_amount_and_more.py  0012_paymentsettings.py  0013_userbehavior.py  0014_userbehavior_session_id_alter_userbehavior_user.py  (+1 more)
backend/users/: admin.py  models.py  serializers.py  urls.py  views.py
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src/components/: AIChatBot.jsx  (+51 more)
nginx/: Dockerfile  eticaret.conf  nginx.docker.conf
services/: eticaret-backend.service  eticaret-frontend.service  eticaret-ngrok.service  install-services.sh  uninstall-services.sh
(+30 files in other folders)
