[package]
name = "flux-shop"
version = "1.0.0"
description = "FLUX Teknoloji Mağazası"
authors = ["Cem Cedimoglu"]
license = "MIT"
repository = "https://github.com/Xserio617/flux-shop"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "flux_shop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
